add pagee question

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,6 +1,31 @@
 a.nav-link {
     text-transform: uppercase !important;
 }
+
 .navbar-area {
     background-color: white;
+}
+
+.page-title-area {
+    position: relative;
+    z-index: 1;
+    background: transparent url(../img/page-title-bg.jpg) right top no-repeat;
+    text-align: center;
+    /* padding-top: 190px; */
+    /* padding-bottom: 100px; */
+    padding-top: 120px;
+    padding-bottom: 0px;
+}
+
+.ptb-110 {
+    padding-top: 70px;
+    padding-bottom: 110px;
+}
+
+.order-details .payment-box {
+    /* background-color: #fff; */
+    /* -webkit-box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06); */
+    /* box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06); */
+    /* margin-top: 30px; */
+    padding: 30px;
 }
